feat: 优化系统配置和安全性
- 实现环境变量自动加载机制
- 重构配置为自动装配模式
- 修复数据库分区和索引问题
- 优化WebSocket和文件存储配置
- 提高系统安全性和可维护性